sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: not found: value a
    while(i-a>=0 && !plusPetitQue(i-a,v)){
            ^AlgInsertionSort:6: error: not found: value a
    while(i-a>=0 && !plusPetitQue(i-a,v)){
                                    ^AlgInsertionSort:8: error: not found: value a
      copie(i-a, i-a+1)
              ^AlgInsertionSort:8: error: not found: value a
      copie(i-a, i-a+1)
                   ^AlgInsertionSort:9: error: not found: value a
      a=a+1;
      ^AlgInsertionSort:11: error: not found: value a
    setValeur(i-a+1,v);
                ^